[package]
edition = "2021"
authors = ["David Smith <1734595+daveismith@users.noreply.github.com>"]
name = "r2-datapanel"
version = "0.0.1"
license = "MIT or Apache-2.0"

[features]
default = ["defmt"]
defmt = []

[dependencies]
embassy-rp = { version = "0.3.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040"
] }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt"
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime"
] }
embassy-futures = { version = "0.1.1" }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.4.0" }

defmt = "0.3.10"
defmt-rtt = "0.4.1"
format_no_std = "1.2.0"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3", features = ["print-defmt"] }

pwm-pca9685 = "1.0.0"

menu = "0.6.1"
log = "0.4.25"

static_cell = "2.1"
portable-atomic = { version = "1.10", features = ["critical-section"] }


rand_core = "0.6.4"
rand = { version = "0.8.5", default-features = false }

mcp2515 = "0.3.0"
embedded-can = "0.4.1"
embedded-hal-bus = "0.2.0"
embedded-io-async = "0.6.1"

noline = "0.5.1"
fixed-queue = "0.5.1"

pio-proc = { git = "https://github.com/rp-rs/pio-rs", rev = "fa586448b0b223217eec8c92c19fe6823dd04cc4" }
pio = { git = "https://github.com/rp-rs/pio-rs", rev = "fa586448b0b223217eec8c92c19fe6823dd04cc4" }

crc16-umts-fast = "0.4.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[patch.crates-io]
# make sure to get the latest git rev from github, you can see the latest one here:
# https://github.com/embassy-rs/embassy/commits/main/
#embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy",     rev = "ad2f7c329bbbefc0e3be38b36627705a5f42427b" }
#embassy-executor     = { git = "https://github.com/embassy-rs/embassy",     rev = "ad2f7c329bbbefc0e3be38b36627705a5f42427b" }
#embassy-rp           = { git = "https://github.com/embassy-rs/embassy",     rev = "ad2f7c329bbbefc0e3be38b36627705a5f42427b" }
#embassy-sync         = { git = "https://github.com/embassy-rs/embassy",     rev = "ad2f7c329bbbefc0e3be38b36627705a5f42427b" }
#embassy-time         = { git = "https://github.com/embassy-rs/embassy",     rev = "ad2f7c329bbbefc0e3be38b36627705a5f42427b" }
#embassy-usb          = { git = "https://github.com/embassy-rs/embassy",     rev = "ad2f7c329bbbefc0e3be38b36627705a5f42427b" }
#embassy-usb-driver   = { git = "https://github.com/embassy-rs/embassy",     rev = "ad2f7c329bbbefc0e3be38b36627705a5f42427b" }
#embassy-usb-logger   = { git = "https://github.com/embassy-rs/embassy",     rev = "ad2f7c329bbbefc0e3be38b36627705a5f42427b" }
